Changed 'Academia' to 'Education' and fixed Safari layout issues in css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,7 @@ h2 code {
 
 .w-100 {
     margin: auto;
+    min-width: 1px;
 }
 
 .main_color  {
